Fix input zoom on iOS

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -141,7 +141,7 @@ main {
   background-color: #FFFFFF;
   border-radius: 24px;
   color: #191414;
-  font-size: 12px;
+  font-size: 16px;
   margin-bottom: 0.5rem;
 }
 
